# cmake-template1

./: CMakeLists.txt  README.md
aux/: cmake_config.h.in
src/: main.cc
